# api-management-ramp

./: .gitignore  README.md  api-sample.bicep  app.bicep  app.json  app.py  requirements.txt  scritp.ps1  test.bicep  test.ps1
.github/workflows/: east-us-return-eastus_app-service-private-one.yml  east-us-return-eastus_secure-tenant-app-two.yml  https-request-cosmosdb_app-reference-two-tme-uat.yml  https-request-cosmosdb_reference-app-four-tme-uat.yml  https-request-cosmosdb_reference-app-three-tme-uat.yml  https-request-cosmosdb_reference-app-two-tme-uat.yml  https-request-cosmosdb_wa-secure-paas-demo-tme-uat.yml  https-request-cosmosdb_web-app-reference-two-tme-uat.yml  https-request-cosmosdb_web-app-secure-tme-uat.yml  https-request-cosmosdb_web-nsp-demo-tme-uat.yml  https-request-outbound_app-service-post-tme-dev.yml  https-request-outbound_call-secure-tenant.yml  https-request-outbound_reference-app-one-tme-uat.yml  https-request-outbound_sat-app-service-secure-reference-001.yml  https-request-outbound_secure-tenant-app-one.yml  https-request-outbound_sun-app-service-secure-reference-001.yml  https-request-outbound_test-web-app-niner-001.yml  main_app-service-niner-009.yml  main_appams001.yml  (+18 more)
app/: app.json  app.py  dockerfile  pyproject.toml  requirements.txt
bicep-modules/: api-mgmt.bicep  app-gateway.bicep  key-vault.bicep  vault-access.bicep  virtual-machine.bicep  vm.bicep
kubernetes-deployment/: csi-driver-test.yaml  http-deployment.yaml  https-e2n-ssl.yaml  https-ssl-termination-private.yaml  https-ssl-termination.yaml
src/: requirements.txt
